examples/test/testpolicy18157.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18157
  namespace: namespace267
spec:
  podSelector:
    matchLabels:
      key8: value2
      key12: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value29
          key44: value3
      podSelector:
        matchLabels:
          key36: value23
          key7: value47
          key8: value2
